--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"dependencies": {
 		"body-parser": "^1.15.2",
 		"cookie-parser": "^1.4.3",
-		"dotenv": "^16.0.0",
 		"express": "^4.14.0",
 		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
 	},
@@ -12,4 +11,7 @@
 	"scripts": {
 		"start": "node server.js"
 	}
+	"engines": {
+    "node": "16.x"
+  }
 }
